--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"@prisma/client": "^5.22.0",
 		"bcryptjs": "^2.4.3",
 		"jsonwebtoken": "^9.0.2",
-		"node-fetch": "^3.3.2"
+		"node-fetch": "^3.3.2",
+		"pdfjs-dist": "^5.4.624"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.1.0",
